--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 		"@emotion/styled": "^11.11.0",
 		"@faker-js/faker": "^8.4.1",
 		"@iconify/react": "^4.1.1",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
 		"@mui/icons-material": "^5.15.20",
 		"@mui/lab": "^5.0.0-alpha.170",
 		"@mui/material": "^5.15.20",
+		"@mui/x-charts": "^7.7.0",
 		"apexcharts": "^3.49.1",
 		"axios": "^1.6.2",
 		"date-fns": "^3.6.0",
@@ -34,7 +37,6 @@
 		"react-multi-carousel": "^2.8.5",
 		"react-notifications": "^1.7.4",
 		"react-router-dom": "^6.14.1",
-		"react-sparklines": "^1.7.0",
 		"react-step-wizard": "^5.3.11",
 		"react-toastify": "^7.0.4",
 		"react-use-websocket": "^4.2.0",
